<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vikrant.hw2_group39.MainActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="84dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal|center">

            <Button
                android:text="@string/add_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonAddMovie"
                android:textAllCaps="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal|center">

            <Button
                android:text="@string/edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonEdit"
                android:textAllCaps="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal|center">

            <Button
                android:text="@string/delete_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonDeleteMovie"
                android:textAllCaps="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal|center">

            <Button
                android:text="@string/show_list_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonShowListByYear"
                android:textAllCaps="false" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal|center">

            <Button
                android:text="@string/show_list_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonShowListByRating"
                android:textAllCaps="false" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
